--- a/transfer-service/src/main/resources/application.yml
+++ b/transfer-service/src/main/resources/application.yml
@@ -14,8 +14,6 @@ spring:
               default:
                 key:
                   serde: org.apache.kafka.common.serialization.Serdes$StringSerde
-                value:
-                  serde: io.confluent.kafka.streams.serdes.avro.SpecificAvroSerde
               schema:
                 registry:
                   url: http://localhost:8081
@@ -23,19 +21,23 @@ spring:
                 subject:
                   name:
                     strategy: io.confluent.kafka.serializers.subject.RecordNameStrategy
+          bindings:
+            input:
+              consumer:
+                valueSerde: io.confluent.kafka.streams.serdes.avro.SpecificAvroSerde
+            outputOk:
+              producer:
+                valueSerde: io.confluent.kafka.streams.serdes.avro.SpecificAvroSerde
+            outputKo:
+              producer:
+                valueSerde: io.confluent.kafka.streams.serdes.avro.SpecificAvroSerde
       bindings:
         input:
           destination: test-postgresql-jdbc-movement
-          consumer:
-            useNativeDecoding: true
         outputOk:
           destination: account
-          producer:
-            useNativeEncoding: true
         outputKo:
           destination: fraudulent-transfer
-          producer:
-            useNativeEncoding: true
 
 server:
   port: 8086
